Test refactoring and fix warnings